--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-wordpress-starter",
-  "homepage": "https://presspoint24.com/",
+  "homepage": "https://next-wordpress-starter.spacejelly.dev",
   "version": "0.1.0",
   "license": "MIT",
   "author": "Colby Fayock <hello@colbyfayock.com>",
@@ -13,7 +13,7 @@
     "format:no-path": "yarn lint:no-path --fix",
     "lint": "eslint .",
     "lint:no-path": "eslint",
-    "start": "next start -p ${PORT:=3000}",    
+    "start": "next start -p ${PORT:=3000}",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -21,24 +21,21 @@
     "**/*.scss": "yarn prettier --write"
   },
   "dependencies": {
-    "@apollo/client": "^3.0",
-    "jsonld": "^5.2.0",
-    "@types/react": "^17.0.39",
-    "express": "^4.17.3",
+    "@apollo/client": "^3.5",
     "date-fns": "^2.25.0",
+    "@types/react": "^17.0.39",
     "dotenv": "^10.0.0",
     "fuse.js": "^6.4.6",
     "graphql": "^16.0.1",
-    "url": "^0.11.0",
     "he": "^1.2.0",
     "loader-utils": "^3.1.3",
-    "next": "latest",
-    "react": "latest",
+    "next": "12.0.3",
     "next-compose-plugins": "^2.2.1",
     "nextjs-progressbar": "^0.0.13",
     "parameterize": "^1.0.0",
     "path": "^0.12.7",
-    "playwright": "^1.16.3",    
+    "playwright": "^1.16.3",
+    "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
@@ -47,12 +44,6 @@
     "style.css": "^1.0.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "^12.0.3",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.4",
     "lint-staged": ">=11.2.6",
     "prettier": "2.4.1",
