--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-WORDPRESS_GRAPHQL_ENDPOINT="https://animalsnews.info/graphql"
+WORDPRESS_GRAPHQL_ENDPOINT="https://presspoint24.com/animals/graphql"
