--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@apollo/client": "^3.5",
     "date-fns": "^2.25.0",
-    "@types/react": "^17.0.39",
+    "@types/react": "18.0.1",
     "dotenv": "^10.0.0",
     "fuse.js": "^6.4.6",
     "graphql": "^16.0.1",
